<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"


  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".MainActivity"
  android:theme="@style/MaterialAlertDialog.Material3"
  >

  <TextView
    android:id="@+id/select_password_count"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="56dp"
    android:text="@string/select_password_count"
    android:textColor="#E91E63"
    android:textSize="16sp"
    android:textStyle="bold"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.058"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

  <TextView
    android:id="@+id/select_password_length"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="52dp"
    android:text="@string/select_password_length"
    android:textColor="#E91E63"
    android:textSize="16sp"
    android:textStyle="bold"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.059"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/select_password_count" />

  <SeekBar
    android:id="@+id/seekPassCount"
    android:layout_width="match_parent"
    android:layout_height="20dp"
    android:layout_marginTop="12dp"
    android:max="9"
    android:progress="1"
    app:layout_constraintHorizontal_bias="0.0"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/select_password_count" />

  <SeekBar
    android:id="@+id/seekPassLength"
    android:layout_width="match_parent"
    android:layout_height="20dp"
    android:layout_marginTop="12dp"
    android:max="15"
    android:progress="0"
    app:layout_constraintHorizontal_bias="0.0"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/select_password_length" />

  <Button
    android:id="@+id/Generate_Password_Thread_button"
    android:layout_width="274dp"
    android:layout_height="65dp"
    android:layout_marginTop="128dp"
    android:backgroundTint="#1E68E9"
    android:text="@string/generate_password_thread"

    android:textColor="#FFFFFF"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.496"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/seekPassLength" />

  <Button
    android:id="@+id/Generate_Password_ASYNC_button"
    android:layout_width="275dp"
    android:layout_height="65dp"
    android:layout_marginTop="56dp"
    android:text="@string/generate_password_async"
    android:textColor="#FFFFFF"
    android:backgroundTint="#1E68E9"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.496"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/Generate_Password_Thread_button" />

  <TextView
    android:id="@+id/Value_PassCount"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="204dp"
    android:layout_marginEnd="32dp"
    android:layout_marginBottom="12dp"
    android:text="@string/Value_Pass_Count"
    android:textColor="#673AB7"
    android:textSize="24sp"
    android:textStyle="bold"
    app:layout_constraintBottom_toTopOf="@+id/seekPassCount"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toEndOf="@+id/select_password_count" />

  <TextView
    android:id="@+id/Value_PassLength"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="204dp"
    android:layout_marginEnd="32dp"
    android:layout_marginBottom="12dp"
    android:text="@string/Value_PassLength"
    android:textColor="#673AB7"
    android:textSize="24sp"
    android:textStyle="bold"
    app:layout_constraintBottom_toTopOf="@+id/seekPassLength"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toEndOf="@+id/select_password_length" />

  <TextView
    android:id="@+id/Selected_password_Field"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="60dp"
    android:text="@string/selected_password"
    android:textColor="#B73A70"
    android:textSize="20sp"
    android:textStyle="bold"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/seekPassLength" />

  <TextView
    android:id="@+id/Selected_password_Value"
    android:layout_width="152dp"
    android:layout_height="28dp"
    android:layout_marginStart="28dp"
    android:layout_marginTop="60dp"
    android:text="@string/Selected_password_Value"
    android:textColor="#9536F4"
    android:textSize="18sp"
    android:textStyle="bold"
    app:layout_constraintStart_toEndOf="@+id/Selected_password_Field"
    app:layout_constraintTop_toBottomOf="@+id/seekPassLength" />

</androidx.constraintlayout.widget.ConstraintLayout>
